kubernetes/apps/infrastructure/authentik/components/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authentik-server
  namespace: security
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod-aritrosinha"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - authentik.hyperion.aritrosinha.dpdns.org
      secretName: authentik-tls
  rules:
    - host: authentik.hyperion.aritrosinha.dpdns.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: authentik-server
                port:
                  number: 80
