kubernetes/apps/infrastructure/authentik/components/ingress/patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authentik-server
  namespace: security
spec:
  rules:
    - host: authentik.ruth.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: authentik-server
                port:
                  number: 80
